--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -14,7 +14,7 @@
  vertical-align: middle;
  background-color: rgb(49 47 61);;
 }
-.nav h4{
+.nav img{
     color:rgb(255, 255, 255);
     padding-top: 8px;
     font-style:normal;
