--- a/src/style/home1.css
+++ b/src/style/home1.css
@@ -28,7 +28,14 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  content: 'next';
+  color: white;
+}
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+  content: 'prev';
+  color: white;
+}
 .swiper-slide img {
   display: block;
   width: 100%;
