--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -33,3 +33,9 @@
                 padding-top: 15px;   
                 font-size: 13px
 }
+#signup {
+        padding-left: 300px;
+}
+#cart{
+    padding-right: 200px;
+}
