--- a/src/style/home.css
+++ b/src/style/home.css
@@ -164,10 +164,9 @@ font-family: 'Raleway', sans-serif;
 
 .section-3{
   text-align: center;
-  padding-top: 100px;
+  padding: 100px 0;
   background-image: url("https://fleur.qodeinteractive.com/wp-content/uploads/2016/12/h1-img-1.jpg");
   width: 100%;
-  height: 100vh;
   background-position: center center;
   background-attachment: fixed;
   margin-bottom: 300px;
