--- a/src/style/home.css
+++ b/src/style/home.css
@@ -239,5 +239,8 @@ font-family: 'Raleway', sans-serif;
  font-weight: 300px;
   font-family:'Raleway', sans-serif ;
 }
+footer{
+  background-color: gray;
+}
 
 
